--- a/le_comptoir_front/package.json
+++ b/le_comptoir_front/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^11.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
